--- a/src/pages/edit/center/index.less
+++ b/src/pages/edit/center/index.less
@@ -2,6 +2,11 @@
     flex: 1;
     padding: 40px;
     overflow: auto;
+    background-image: radial-gradient(circle, rgba(185, 185, 185, .5) 1px, transparent 1px), radial-gradient(circle, rgba(0, 0, 0, .5) 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-repeat: repeat;
+    background-color: #f0f2f3;
+    box-shadow: inset 1px 1px 6px #ccc;
     .workarea {
         position: relative;
         border: 1px solid #ccc;
