--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,8 @@
-@import './color.css';
+
+
+:root {
+    --borderColor: #ccc;
+}
 
 #root {
     position: relative;
@@ -6,6 +10,8 @@
     font-family: 'Microsoft YaHei';
     color: #1a2a3a;
 }
+
+@borderColor: #ccc;
 
 body {
     padding: 0;
