--- a/src/pages/edit/header/index.less
+++ b/src/pages/edit/header/index.less
@@ -1,4 +1,3 @@
-@borderColor: #ccc;
 .menu-bar {
     position: relative;
     z-index: 2;
@@ -6,7 +5,7 @@
     display: flex;
     height: 50px;
     box-sizing: border-box;
-    border-bottom: 1px solid @borderColor;
+    border-bottom: 1px solid var(--borderColor);
     justify-content: space-between;
     .right {
         display: flex;
