--- a/src/pages/edit/left/index.less
+++ b/src/pages/edit/left/index.less
@@ -1,16 +1,15 @@
-@borderColor: #ccc;
 .tools-left {
     width: 100px;
     box-sizing: border-box;
     padding: 20px;
-    border-right: 1px solid @borderColor;
+    border-right: 1px solid var(--borderColor);
     box-sizing: border-box;
     .drag-item {
         display: flex;
         height: 40px;
         margin-bottom: 10px;
         cursor: 'move';
-        border: 1px solid @borderColor;
+        border: 1px solid var(--borderColor);
         align-items: center;
         justify-content: center;
     }
