--- a/src/pages/edit/index.less
+++ b/src/pages/edit/index.less
@@ -3,6 +3,7 @@
     display: flex;
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
     background: #fff;
     flex-direction: column;
 }
@@ -12,9 +13,4 @@
     flex: 1;
     flex-direction: row;
     height: calc(100vh - 50px);
-  
-    .content-center {
-        flex: 1;
-    }
-    
 }
