--- a/src/pages/edit/right/index.less
+++ b/src/pages/edit/right/index.less
@@ -1,7 +1,15 @@
 .tools-panel {
-    width: 400px;
+    width: 460px;
     border-left: 1px solid var(--borderColor);
-}
-.form-com {
-    padding: 0 20px;
+    .form-com {
+        height: calc(100vh - 120px);
+        padding: 0 20px;
+        overflow-y: auto;
+    }
+    .sperate {
+        width: 100%;
+        height: 1px;
+        margin-bottom: 24px;
+        background-color: #f4f4f4;
+    }
 }
