--- a/src/pages/edit/left/index.less
+++ b/src/pages/edit/left/index.less
@@ -8,7 +8,7 @@
         display: flex;
         height: 40px;
         margin-bottom: 10px;
-        cursor: 'move';
+        cursor: 'MOVE';
         border: 1px solid var(--borderColor);
         align-items: center;
         justify-content: center;
