--- a/src/pages/edit/center/index.less
+++ b/src/pages/edit/center/index.less
@@ -9,11 +9,26 @@
     background-repeat: repeat;
     box-shadow: inset 1px 1px 6px #ccc;
     .scroll-div {
+        position: relative;
         width: fit-content;
     }
     .workarea {
         position: relative;
         border: 1px solid #ccc;
         box-sizing: border-box;
+    }
+    .context-menu {
+        position: absolute;
+        z-index: 1000;
+        background-color: #fff;
+        border: '1px solid #ccc';
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        .item {
+            padding: 5px 10px;
+            cursor: pointer;
+            &:hover {
+                background-color: #ccc;
+            }
+        }
     }
 }
