--- a/src/pages/edit/header/index.less
+++ b/src/pages/edit/header/index.less
@@ -7,6 +7,13 @@
     box-sizing: border-box;
     border-bottom: 1px solid var(--borderColor);
     justify-content: space-between;
+    .left {
+        display: flex;
+        align-items: center;
+        .btn {
+            margin-left: 20px;
+        }
+    }
     .right {
         display: flex;
         justify-content: flex-end;
