--- a/src/pages/edit/center/index.less
+++ b/src/pages/edit/center/index.less
@@ -1,15 +1,25 @@
 .content-center {
+    position: relative;
     padding: 30px;
     overflow: auto;
-    background-color: #f0f2f3;
+    background-color: #f2f2f2;
     flex: 1;
     background-image: radial-gradient(circle, rgba(185, 185, 185, 0.5) 1px, transparent 1px),
         radial-gradient(circle, rgba(0, 0, 0, 0.5) 1px, transparent 1px);
-    background-size: 20px 20px;
+    background-size: 22px 22px;
     background-repeat: repeat;
     box-shadow: inset 1px 1px 6px #ccc;
+    .ruler {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+    }
     .scroll-div {
         position: relative;
+        z-index: 2;
         width: fit-content;
     }
     .workarea {
