--- a/src/pages/edit/center/index.less
+++ b/src/pages/edit/center/index.less
@@ -1,14 +1,33 @@
 .content-center {
-    position: relative;
-    padding: 30px;
-    overflow: auto;
-    background-color: #f2f2f2;
     flex: 1;
-    background-image: radial-gradient(circle, rgba(185, 185, 185, 0.5) 1px, transparent 1px),
-        radial-gradient(circle, rgba(0, 0, 0, 0.5) 1px, transparent 1px);
-    background-size: 22px 22px;
-    background-repeat: repeat;
-    box-shadow: inset 1px 1px 6px #ccc;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    .content-center-top {
+        position: relative;
+        padding: 30px;
+        overflow: auto;
+        background-color: #f2f2f2;
+        flex: 1;
+        background-image: radial-gradient(circle, rgba(185, 185, 185, 0.5) 1px, transparent 1px),
+            radial-gradient(circle, rgba(0, 0, 0, 0.5) 1px, transparent 1px);
+        background-size: 22px 22px;
+        background-repeat: repeat;
+        box-shadow: inset 1px 1px 6px #ccc;
+    }
+    .content-center-bottom {
+        display: flex;
+        height: 60px;
+        border-top: 1px solid #ccc;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 20px;
+        margin-right: 40px;
+        .lock-img {
+            width: 24px;
+            cursor: pointer;
+        }
+    }
     .ruler {
         position: absolute;
         top: 0;
@@ -21,6 +40,7 @@
         position: relative;
         z-index: 2;
         width: fit-content;
+        transform-origin: 0 0;
     }
     .workarea {
         position: relative;
